--- a/MentalArithmetic/MentalArithmetic.csproj
+++ b/MentalArithmetic/MentalArithmetic.csproj
@@ -96,6 +96,7 @@
     <EmbeddedResource Include="Tugash.resx">
       <DependentUpon>Tugash.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\DataSources\MentalArithmetic.Scripts.Rekordlar.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
